--- a/app/mathdoku/styles.module.css
+++ b/app/mathdoku/styles.module.css
@@ -4,6 +4,7 @@
   width: 100%;
   height: 100%;
   container-type: size;
+  border-color: red;
 }
 
 .grid {
@@ -13,6 +14,7 @@
   aspect-ratio: 1/1;
   border-style:solid;
   display: flex;
+  flex-direction: row;
   container-type: size;
 }
 
