--- a/app/mathdoku/styles.module.css
+++ b/app/mathdoku/styles.module.css
@@ -11,6 +11,7 @@
   margin: auto;
   padding: 0;
   width: 800px;
+  height: 800px;
   aspect-ratio: 1/1;
   border-style:solid;
   display: flex;
@@ -33,5 +34,6 @@
 @media (max-width: 1000px) or (max-height: 1000px) {
   .grid {
     width: 80vmin;
+    height: 80vmin;
   }
 }
