--- a/app/flashcards/styles.module.css
+++ b/app/flashcards/styles.module.css
@@ -1,5 +1,5 @@
 .flashcardContainer {
-  width: 300px;
+  max-width: 400px;
   background-color: transparent;
   perspective: 1000px;
 }
@@ -9,6 +9,7 @@
   height: 200px;
   border-style: solid;
   border-color: black;
+  border-radius: 0.375rem;
   transition: transform 0.5s;
   transform-style: preserve-3d;
 }
@@ -22,6 +23,19 @@
   width: 100%;
   height: 100%;
   background-color: white;
+  border-radius: 0.375rem;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+}
+
+.deck {
+  margin-bottom: 1rem;
+  width: 200px;
+  height: 120px;
+  border-color: black;
+  box-shadow: 2px 2px;
+}
+
+.index_card_body {
+  background-image: url(assets/vecteezy_a-lined-paper-with-a-blank-page_36129234.jpg)
 }
